# Dispro_CodigoCompuertasLogicas

./: CMakeLists.txt
Codigo Base Diagrama de Tiempo/: Diagrama De Tiempo.c
Codigo Base Diagrama de Tiempo/CambiosDeBase/: 8Bus_Hexa.c  CambioDeBases.h
Codigo Base Diagrama de Tiempo/Compuertas Logicas Y Mas/: FlipFlop_gate.c  LogicGates.h
Codigo Base Diagrama de Tiempo/Contadores Bits/: Contadores_4Bit.c  Contadores_Bits.h
Codigo Base Diagrama de Tiempo/Diagrama de Tiempo V2/: Diagrama De Tiempo V2.c
Codigo Base Diagrama de Tiempo/WaveDrom Format/: FormatoWaveDrom.c  FormatoWaveDrom.h
Codigo Base Diagrama de Tiempo/X - Punto2/: Diagrama De Tiempo Punto2.c
Codigo Base Diagrama de Tiempo/X-Punto14/: Diagrama De Tiempo Punto14.c
Codigo Base Diagrama de Tiempo/X-Punto15/: Diagrama De Tiempo Punto15.c
Codigo Base Diagrama de Tiempo/X-Punto3/: Diagrama De Tiempo Punto3.c
